--- a/index.html
+++ b/index.html
@@ -17,24 +17,41 @@
 <body class="flex min-h-screen">
 
     <aside id="sidebar" class="w-20 bg-black/50 p-4 flex flex-col fixed h-full transition-all duration-300 ease-in-out">
-        </aside>
+        <div id="sidebar-toggle" class="flex items-center justify-center gap-3 mb-10 cursor-pointer">
+            <div class="flex items-center gap-3 overflow-hidden">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#60a5fa" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-package flex-shrink-0">
+                    <path d="M16.5 9.4 7.55 4.24"/><path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"/><path d="m3.3 7 8.7 5 8.7-5"/><path d="M12 22V12"/>
+                </svg>
+                <span class="text-xl font-bold text-white whitespace-nowrap nav-text hidden">Finanzas PRO</span>
+            </div>
+        </div>
+        <nav class="flex flex-col gap-2 flex-grow">
+            <a href="#" id="nav-inicio" class="nav-link active flex items-center justify-center gap-3 p-3 rounded-r-lg">
+                <i data-lucide="layout-dashboard"></i> <span class="nav-text hidden">Inicio</span>
+            </a>
+            <a href="#" id="nav-cashflow" class="nav-link flex items-center justify-center gap-3 p-3 rounded-r-lg">
+                <i data-lucide="arrow-left-right"></i> <span class="nav-text hidden">Cash Flow</span>
+            </a>
+            <a href="#" id="nav-cuentas" class="nav-link flex items-center justify-center gap-3 p-3 rounded-r-lg">
+                <i data-lucide="landmark"></i> <span class="nav-text hidden">Cuentas & Bancos</span>
+            </a>
+            <a href="#" id="nav-proformas" class="nav-link flex items-center justify-center gap-3 p-3 rounded-r-lg">
+                <i data-lucide="file-check-2"></i> <span class="nav-text hidden">Proformas</span>
+            </a>
+            <a href="#" id="nav-reportes" class="nav-link flex items-center justify-center gap-3 p-3 rounded-r-lg">
+                <i data-lucide="file-line-chart"></i> <span class="nav-text hidden">Reportes</span>
+            </a>
+            <a href="#" id="nav-archivos" class="nav-link flex items-center justify-center gap-3 p-3 rounded-r-lg">
+                <i data-lucide="archive"></i> <span class="nav-text hidden">Archivos</span>
+            </a>
+            <a href="#" id="nav-ajustes" class="nav-link flex items-center justify-center gap-3 p-3 rounded-r-lg">
+                <i data-lucide="settings"></i> <span class="nav-text hidden">Ajustes</span>
+            </a>
+        </nav>
+    </aside>
 
     <main id="main-content" class="flex-1 ml-20 p-8 main-content">
-        <div id="page-inicio" class="page-content">
-            </div>
-
-        <div id="page-cashflow" class="page-content hidden">
-            </div>
-
-        <div id="page-inversiones" class="page-content hidden">
-             </div>
-
-        <div id="confirmation-modal" class="fixed inset-0 z-50 items-center justify-center hidden">
-            </div>
-
-        <div id="alert-modal" class="fixed inset-0 z-50 items-center justify-center hidden">
-            </div>
-    </main>
+        </main>
     
     <script src="script.js"></script>
 </body>
