--- a/index.html
+++ b/index.html
@@ -547,6 +547,7 @@
             <div class="border-b border-gray-700 mb-6">
                 <nav class="flex -mb-px space-x-6" aria-label="Tabs">
                     <button id="facturacion-tab-crear" class="tab-button-inner active whitespace-nowrap py-3 px-1 border-b-2 font-medium text-sm transition">Crear Factura</button>
+                    <button id="facturacion-tab-listado" class="tab-button-inner whitespace-nowrap py-3 px-1 border-b-2 border-transparent text-gray-400 hover:text-gray-200 hover:border-gray-500 font-medium text-sm transition">Listado de Facturas</button>
                     <button id="facturacion-tab-config" class="tab-button-inner whitespace-nowrap py-3 px-1 border-b-2 border-transparent text-gray-400 hover:text-gray-200 hover:border-gray-500 font-medium text-sm transition">Configuración AEAT (Backend)</button>
                 </nav>
             </div>
@@ -617,6 +618,31 @@
                                 <p class="text-center text-gray-500 pt-8">El resultado de la generación aparecerá aquí.</p>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+
+            <div id="facturacion-content-listado" class="hidden">
+                <div class="card p-6 rounded-xl">
+                    <h3 class="font-semibold mb-4">Listado de Facturas</h3>
+                    <div class="mb-4">
+                        <input type="text" id="facturas-search" class="form-input" placeholder="Buscar por N° de factura o cliente...">
+                    </div>
+                    <div class="overflow-x-auto">
+                        <table class="w-full text-left min-w-[700px]">
+                            <thead>
+                                <tr class="text-gray-400 border-b border-gray-700">
+                                    <th class="py-2 px-3">Fecha</th>
+                                    <th class="py-2 px-3">N° Factura</th>
+                                    <th class="py-2 px-3">Cliente</th>
+                                    <th class="py-2 px-3 text-right">Monto</th>
+                                    <th class="py-2 px-3 text-center">Estado</th>
+                                    <th class="py-2 px-3 text-center">Acciones</th>
+                                </tr>
+                            </thead>
+                            <tbody id="facturas-table-body">
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
