--- a/index.html
+++ b/index.html
@@ -50,14 +50,15 @@
             <a href="#" id="nav-ajustes" class="nav-link flex items-center justify-center gap-3 p-3 rounded-r-lg">
                 <i data-lucide="settings"></i> <span class="nav-text hidden">Ajustes</span>
             </a>
-            <a href="#" id="nav-facturacion" class="nav-link hidden flex items-center justify-center gap-3 p-3 rounded-r-lg">
+            <hr class="border-gray-700 my-2">
+            <a href="#" id="nav-facturacion" class="nav-link flex items-center justify-center gap-3 p-3 rounded-r-lg">
                 <i data-lucide="file-text"></i> <span class="nav-text hidden">Facturación</span>
             </a>
-            <a href="#" id="nav-usuarios" class="nav-link hidden flex items-center justify-center gap-3 p-3 rounded-r-lg">
-                <i data-lucide="users"></i> <span class="nav-text hidden">Usuarios</span>
-            </a>
-            <a href="#" id="nav-inversiones" class="nav-link hidden flex items-center justify-center gap-3 p-3 rounded-r-lg">
+            <a href="#" id="nav-inversiones" class="nav-link flex items-center justify-center gap-3 p-3 rounded-r-lg">
                 <i data-lucide="trending-up"></i> <span class="nav-text hidden">Inversiones</span>
+            </a>
+            <a href="#" id="nav-usuarios" class="nav-link flex items-center justify-center gap-3 p-3 rounded-r-lg">
+                <i data-lucide="users"></i> <span class="nav-text hidden">Usuarios</span>
             </a>
         </nav>
     </aside>
@@ -409,8 +410,7 @@
                 <div class="card p-6 rounded-xl lg:col-span-2">
                     <h3 class="font-semibold text-lg mb-4">Gestión de Módulos</h3>
                     <p class="text-sm text-gray-400 mb-4">Activa o desactiva módulos para expandir la funcionalidad de tu dashboard.</p>
-                    <div id="modules-list" class="grid grid-cols-1 md:grid-cols-2 gap-4">
-                        </div>
+                    
                 </div>
 
                 <div id="aeat-settings-card" class="card p-6 rounded-xl lg:col-span-2 hidden">
@@ -742,6 +742,21 @@
                     <button id="modal-cancel-btn" class="px-4 py-2 rounded-lg bg-gray-600 hover:bg-gray-700 text-white font-semibold">Cancelar</button>
                     <button id="modal-confirm-btn" class="px-4 py-2 rounded-lg bg-red-600 hover:bg-red-700 text-white font-semibold">Confirmar</button>
                 </div>
+            </div>
+        </div>
+
+        <div id="invoice-viewer-modal" class="fixed inset-0 z-50 items-center justify-center hidden bg-black/80">
+            <div class="card rounded-xl p-0 z-10 w-full max-w-4xl max-h-[90vh] flex flex-col">
+                <div class="flex justify-between items-center p-4 border-b border-gray-700">
+                    <h3 class="text-xl font-bold text-white">Visualizador de Factura</h3>
+                    <div class="flex items-center gap-2">
+                        <button id="print-invoice-btn" class="p-2 rounded-lg bg-blue-600 hover:bg-blue-700 text-white font-semibold"><i data-lucide="printer" class="w-5 h-5"></i></button>
+                        <button id="pdf-invoice-btn" class="p-2 rounded-lg bg-green-600 hover:bg-green-700 text-white font-semibold"><i data-lucide="file-down" class="w-5 h-5"></i></button>
+                        <button id="close-invoice-viewer-btn" class="p-2 rounded-lg bg-red-600 hover:bg-red-700 text-white font-semibold"><i data-lucide="x" class="w-5 h-5"></i></button>
+                    </div>
+                </div>
+                <div id="invoice-content-area" class="p-8 overflow-y-auto">
+                    </div>
             </div>
         </div>
 
