--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
         <div id="page-usuarios" class="page-content hidden">
             <h2 class="text-3xl font-bold mb-6 text-white">Gestión de Usuarios</h2>
             <div class="card p-6 rounded-xl text-center">
-                <i data-lucide="construct" class="w-16 h-16 mx-auto mb-4 text-yellow-500"></i>
+                <i data-lucide="construction" class="w-16 h-16 mx-auto mb-4 text-yellow-500"></i>
                 <h3 class="font-semibold text-lg">Módulo en Construcción</h3>
                 <p class="text-gray-400">Esta sección estará disponible próximamente.</p>
             </div>
@@ -792,6 +792,6 @@
 
     </main>
     
-    <script src="script.js"></script>
+    <script type="module" src="js/main.js"></script>
 </body>
 </html>
