--- a/index.html
+++ b/index.html
@@ -581,16 +581,16 @@
                                     <select id="factura-operation-type" class="form-input">
                                         </select>
                                 </div>
-                                <div class="grid grid-cols-12 gap-4 mb-4">
-                                    <div class="col-span-6">
-                                        <label for="factura-cliente" class="block text-sm text-gray-400 mb-1">Cliente</label>
-                                        <input type="text" id="factura-client" class="w-full bg-gray-800 border border-gray-700 rounded px-3 py-2 text-sm" placeholder="Nombre del Cliente" required>
-                                    </div>
-                                    <div class="col-span-6">
-                                        <label for="factura-nif" class="block text-sm text-gray-400 mb-1">NIF/CIF</label>
-                                        <input type="text" id="factura-nif" class="w-full bg-gray-800 border border-gray-700 rounded px-3 py-2 text-sm" placeholder="NIF/CIF del Cliente" required>
-                                    </div>
-                                </div>
+                                <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+    <div>
+        <label for="factura-cliente" class="block text-sm text-gray-400 mb-1">Cliente</label>
+        <input type="text" id="factura-cliente" class="form-input" placeholder="Nombre del Cliente" required>
+    </div>
+    <div>
+        <label for="factura-nif" class="block text-sm text-gray-400 mb-1">NIF/CIF</label>
+        <input type="text" id="factura-nif" class="form-input" placeholder="NIF/CIF del Cliente" required>
+    </div>
+</div>
                                 <div class="grid grid-cols-12 gap-4 mb-4">
                                     <div class="col-span-4">
                                         <label for="factura-numero" class="block text-sm text-gray-400 mb-1">Nº Factura</label>
