--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
             <a href="#" id="nav-inversiones" class="nav-link flex items-center justify-center gap-3 p-3 rounded-r-lg">
                 <i data-lucide="trending-up"></i> <span class="nav-text hidden">Inversiones</span>
             </a>
-            <a href="#" id="nav-usuarios" class="nav-link flex items-center justify-center gap-3 p-3 rounded-r-lg">
-                <i data-lucide="users"></i> <span class="nav-text hidden">Usuarios</span>
+            <a href="#" id="nav-clientes" class="nav-link flex items-center justify-center gap-3 p-3 rounded-r-lg">
+                <i data-lucide="contact"></i> <span class="nav-text hidden">Clientes</span>
             </a>
         </nav>
     </aside>
@@ -719,8 +719,8 @@
             </div>
         </div>
         
-        <div id="page-usuarios" class="page-content hidden">
-            <h2 class="text-3xl font-bold mb-6 text-white">Gestión de Usuarios</h2>
+        <div id="page-clientes" class="page-content hidden">
+            <h2 class="text-3xl font-bold mb-6 text-white">Gestión de Clientes</h2>
             <div class="card p-6 rounded-xl text-center">
                 <i data-lucide="construction" class="w-16 h-16 mx-auto mb-4 text-yellow-500"></i>
                 <h3 class="font-semibold text-lg">Módulo en Construcción</h3>
