--- a/index.html
+++ b/index.html
@@ -318,52 +318,56 @@
                     <h3 class="font-semibold mb-4">Generar Nuevo Reporte</h3>
                     <form id="report-form" class="space-y-4">
                         <div>
-                            <label for="report-type" class="block text-sm font-medium text-gray-400">Tipo de Reporte</label>
-                            <select id="report-type" class="form-input mt-1">
+                            <label for="report-type" class="block text-sm font-medium text-gray-400 mb-1">Tipo de Reporte</label>
+                            <select id="report-type" class="form-input">
                                 <option value="movimientos">Movimientos de Cuentas</option>
                                 <option value="documentos">Proformas y Facturas</option>
                                 <option value="inversiones">Inversiones</option>
                                 <option value="sociedades">Cálculo Imp. Sociedades (Trimestral)</option>
                             </select>
                         </div>
-                        <div id="report-filters">
-                            <div id="default-filters-container">
-                                <div class="grid grid-cols-12 gap-4">
-                                    <div class="col-span-6 md:col-span-3">
+                        
+                        <div id="report-filters" class="space-y-4">
+                            <!-- Filtros para reportes estándar -->
+                            <div id="default-filters-container" class="space-y-4">
+                                <div class="grid grid-cols-2 gap-4">
+                                    <div>
                                         <label for="report-period" class="block text-sm font-medium text-gray-400 mb-1">Período</label>
-                                        <select id="report-period" class="w-full bg-gray-800 border border-gray-700 rounded px-3 py-2 text-sm">
+                                        <select id="report-period" class="form-input">
                                             <option value="daily">Diario</option>
                                             <option value="weekly">Semanal</option>
                                             <option value="monthly" selected>Mensual</option>
                                             <option value="annual">Anual</option>
                                         </select>
                                     </div>
-                                    <div id="date-input-daily" class="col-span-6 md:col-span-3 hidden">
-                                        <label for="report-date" class="block text-sm font-medium text-gray-400 mb-1">Fecha</label>
-                                        <input type="date" id="report-date" class="w-full bg-gray-800 border border-gray-700 rounded px-3 py-2 text-sm">
-                                    </div>
-                                    <div id="date-input-weekly" class="col-span-6 md:col-span-3 hidden">
-                                        <label for="report-week" class="block text-sm font-medium text-gray-400 mb-1">Semana</label>
-                                        <input type="week" id="report-week" class="w-full bg-gray-800 border border-gray-700 rounded px-3 py-2 text-sm">
-                                    </div>
-                                    <div id="date-input-monthly" class="col-span-6 md:col-span-3">
-                                        <label for="report-month" class="block text-sm font-medium text-gray-400 mb-1">Mes</label>
-                                        <input type="month" id="report-month" class="w-full bg-gray-800 border border-gray-700 rounded px-3 py-2 text-sm">
-                                    </div>
-                                    <div id="date-input-annual" class="col-span-6 md:col-span-3 hidden">
-                                        <label for="report-year" class="block text-sm font-medium text-gray-400 mb-1">Año</label>
-                                        <input type="number" id="report-year" class="w-full bg-gray-800 border border-gray-700 rounded px-3 py-2 text-sm" placeholder="Ej: 2024">
+                                    <!-- Contenedor para los inputs de fecha que se mostrarán/ocultarán -->
+                                    <div id="date-inputs-container">
+                                        <div id="date-input-daily" class="hidden">
+                                            <label for="report-date" class="block text-sm font-medium text-gray-400 mb-1">Fecha</label>
+                                            <input type="date" id="report-date" class="form-input">
+                                        </div>
+                                        <div id="date-input-weekly" class="hidden">
+                                            <label for="report-week" class="block text-sm font-medium text-gray-400 mb-1">Semana</label>
+                                            <input type="week" id="report-week" class="form-input">
+                                        </div>
+                                        <div id="date-input-monthly">
+                                            <label for="report-month" class="block text-sm font-medium text-gray-400 mb-1">Mes</label>
+                                            <input type="month" id="report-month" class="form-input">
+                                        </div>
+                                        <div id="date-input-annual" class="hidden">
+                                            <label for="report-year" class="block text-sm font-medium text-gray-400 mb-1">Año</label>
+                                            <input type="number" id="report-year" class="form-input" placeholder="Ej: 2024">
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="grid grid-cols-12 gap-4">
-                                    <div class="col-span-6 md:col-span-3">
-                                        <label for="report-account" class="block text-sm font-medium text-gray-400">Cuenta / Banco</label>
-                                        <select id="report-account" class="form-input mt-1">
-                                            </select>
+                                <div class="grid grid-cols-2 gap-4">
+                                    <div>
+                                        <label for="report-account" class="block text-sm font-medium text-gray-400 mb-1">Cuenta</label>
+                                        <select id="report-account" class="form-input"></select>
                                     </div>
-                                    <div class="col-span-6 md:col-span-3">
-                                        <label for="report-part" class="block text-sm font-medium text-gray-400">Parte</label>
-                                        <select id="report-part" class="form-input mt-1">
+                                    <div>
+                                        <label for="report-part" class="block text-sm font-medium text-gray-400 mb-1">Parte</label>
+                                        <select id="report-part" class="form-input">
                                             <option value="all">Ambas (A y B)</option>
                                             <option value="A">A</option>
                                             <option value="B">B</option>
@@ -371,14 +375,16 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- Filtros para reporte de Sociedades -->
                             <div id="sociedades-filters-container" class="hidden space-y-4">
                                 <div>
-                                    <label for="report-year-sociedades" class="block text-sm font-medium text-gray-400">Año Fiscal</label>
-                                    <select id="report-year-sociedades" class="form-input mt-1"></select>
+                                    <label for="report-year-sociedades" class="block text-sm font-medium text-gray-400 mb-1">Año Fiscal</label>
+                                    <select id="report-year-sociedades" class="form-input"></select>
                                 </div>
                                 <div>
-                                    <label for="report-periodo-sociedades" class="block text-sm font-medium text-gray-400">Período de Pago</label>
-                                    <select id="report-periodo-sociedades" class="form-input mt-1">
+                                    <label for="report-periodo-sociedades" class="block text-sm font-medium text-gray-400 mb-1">Período de Pago</label>
+                                    <select id="report-periodo-sociedades" class="form-input">
                                         <option value="1P">1P (20 de Abril)</option>
                                         <option value="2P">2P (20 de Octubre)</option>
                                         <option value="3P">3P (20 de Diciembre)</option>
@@ -386,6 +392,7 @@
                                 </div>
                             </div>
                         </div>
+
                         <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg transition-colors flex items-center justify-center gap-2">
                             <i data-lucide="search" class="w-4 h-4"></i> Generar Reporte
                         </button>
