--- a/index.html
+++ b/index.html
@@ -132,6 +132,13 @@
                             <label for="transaction-category" class="block text-sm font-medium text-gray-400 mb-1">Categoría</label>
                             <select id="transaction-category" class="form-input" required></select>
                         </div>
+                        <div id="transaction-iva-container" class="hidden">
+                           <label for="transaction-iva" class="block text-sm font-medium text-gray-400 mb-1">Monto IVA (Opcional)</label>
+                            <div class="relative">
+                                <span id="iva-currency-symbol" class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none text-gray-400">$</span>
+                                <input type="number" id="transaction-iva" class="form-input pl-8" placeholder="21.00" step="0.01">
+                            </div>
+                        </div>
                         <div>
                            <label for="transaction-amount" class="block text-sm font-medium text-gray-400 mb-1">Monto</label>
                             <div class="relative">
